# transub

./: .gitignore  CHANGELOG.md  PACKAGING.md  README.md  README.zh-CN.md  pyproject.toml  transub-sample.conf
.github/workflows/: README.md  publish.yml
transub/: cli.py  config.py  subtitles.py  test_concurrent_demo.py  test_concurrent_performance.py  test_concurrent_simple.py  test_concurrent_translate.py  test_retry_performance.py  test_smart_retry.py  test_subtitles.py  test_translate.py  transcribe.py  translate.py  transub-sample.conf
